0.2:
- Collision detection is now pixel-perfect (fixes Sa-Matra, BUTT missile, etc)
- Fixed lander position sign bug which was introduced by previous fixes
- Initial display of planet surface on landing is at correct position
- Planet scan is now properly erased when cancelling/landing
- 3D planet view when entering orbit is now implemented
- TFB_DrawCommandQueue->FullSize was uninitialised.
- Typo 'cultrue' for Thraddash fixed.
- Autopilot indicator no longer blinking on starmap and combat
- Entering a star system lockup/messed graphics fixed
- Position of planet info icons/texts is now correct and centered
- Yehat had no subtitles.
- Incorrect position of 'empty slot' and 'team name' in supermelee fixed

0.1:
- Initial release
